--- a/testing/pom.xml
+++ b/testing/pom.xml
@@ -41,6 +41,13 @@
 			<version>5.6.2</version> <!-- Nowsza wersja może być dostępna -->
 			<scope>test</scope>
 		</dependency>
+
+		<dependency>
+			<groupId>org.assertj</groupId>
+			<artifactId>assertj-core</artifactId>
+			<version>3.16.1</version> <!-- może być dostępna nowsza wersja -->
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
