--- a/testing/pom.xml
+++ b/testing/pom.xml
@@ -43,6 +43,13 @@
 		</dependency>
 
 		<dependency>
+			<groupId>org.junit.jupiter</groupId>
+			<artifactId>junit-jupiter-params</artifactId>
+			<version>5.6.1</version><!-- aktualna wersja może ulec zmianie -->
+			<scope>test</scope>
+		</dependency>
+
+		<dependency>
 			<groupId>org.assertj</groupId>
 			<artifactId>assertj-core</artifactId>
 			<version>3.16.1</version> <!-- może być dostępna nowsza wersja -->
